rust/mlt-ffi/generated-c/MltEncoderConfig.h

void MltEncoderConfig_set_tessellate(MltEncoderConfig* self, bool value);
void MltEncoderConfig_set_try_morton_sort(MltEncoderConfig* self, bool value);
void MltEncoderConfig_set_try_hilbert_sort(MltEncoderConfig* self, bool value);
void MltEncoderConfig_set_try_id_sort(MltEncoderConfig* self, bool value);
void MltEncoderConfig_set_allow_fsst(MltEncoderConfig* self, bool value);
void MltEncoderConfig_set_allow_fast_pfor(MltEncoderConfig* self, bool value);
void MltEncoderConfig_set_allow_shared_dict(MltEncoderConfig* self, bool value);