rust/mlt-java/src/main/java/org/maplibre/mlt/encoder/ffi/mlt_ffi_h.java


  /**
   * Address for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_tessellate(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static MemorySegment MltEncoderConfig_set_tessellate$address() {
    return MltEncoderConfig_set_tessellate.ADDR;
  }

  /**
   * {@snippet lang=c :
   * void MltEncoderConfig_set_tessellate(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static void MltEncoderConfig_set_tessellate(MemorySegment self, boolean value) {
    var mh$ = MltEncoderConfig_set_tessellate.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("MltEncoderConfig_set_tessellate", self, value);
      }
      mh$.invokeExact(self, value);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class MltEncoderConfig_set_try_morton_sort {
    public static final FunctionDescriptor DESC =
        FunctionDescriptor.ofVoid(mlt_ffi_h.C_POINTER, mlt_ffi_h.C_BOOL);

    public static final MemorySegment ADDR =
        SYMBOL_LOOKUP.findOrThrow("MltEncoderConfig_set_try_morton_sort");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_try_morton_sort(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static FunctionDescriptor MltEncoderConfig_set_try_morton_sort$descriptor() {
    return MltEncoderConfig_set_try_morton_sort.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_try_morton_sort(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static MethodHandle MltEncoderConfig_set_try_morton_sort$handle() {
    return MltEncoderConfig_set_try_morton_sort.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_try_morton_sort(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static MemorySegment MltEncoderConfig_set_try_morton_sort$address() {
    return MltEncoderConfig_set_try_morton_sort.ADDR;
  }

  /**
   * {@snippet lang=c :
   * void MltEncoderConfig_set_try_morton_sort(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static void MltEncoderConfig_set_try_morton_sort(MemorySegment self, boolean value) {
    var mh$ = MltEncoderConfig_set_try_morton_sort.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("MltEncoderConfig_set_try_morton_sort", self, value);
      }
      mh$.invokeExact(self, value);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class MltEncoderConfig_set_try_hilbert_sort {
    public static final FunctionDescriptor DESC =
        FunctionDescriptor.ofVoid(mlt_ffi_h.C_POINTER, mlt_ffi_h.C_BOOL);

    public static final MemorySegment ADDR =
        SYMBOL_LOOKUP.findOrThrow("MltEncoderConfig_set_try_hilbert_sort");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_try_hilbert_sort(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static FunctionDescriptor MltEncoderConfig_set_try_hilbert_sort$descriptor() {
    return MltEncoderConfig_set_try_hilbert_sort.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_try_hilbert_sort(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static MethodHandle MltEncoderConfig_set_try_hilbert_sort$handle() {
    return MltEncoderConfig_set_try_hilbert_sort.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_try_hilbert_sort(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static MemorySegment MltEncoderConfig_set_try_hilbert_sort$address() {
    return MltEncoderConfig_set_try_hilbert_sort.ADDR;
  }

  /**
   * {@snippet lang=c :
   * void MltEncoderConfig_set_try_hilbert_sort(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static void MltEncoderConfig_set_try_hilbert_sort(MemorySegment self, boolean value) {
    var mh$ = MltEncoderConfig_set_try_hilbert_sort.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("MltEncoderConfig_set_try_hilbert_sort", self, value);
      }
      mh$.invokeExact(self, value);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class MltEncoderConfig_set_try_id_sort {
    public static final FunctionDescriptor DESC =
        FunctionDescriptor.ofVoid(mlt_ffi_h.C_POINTER, mlt_ffi_h.C_BOOL);

    public static final MemorySegment ADDR =
        SYMBOL_LOOKUP.findOrThrow("MltEncoderConfig_set_try_id_sort");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_try_id_sort(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static FunctionDescriptor MltEncoderConfig_set_try_id_sort$descriptor() {
    return MltEncoderConfig_set_try_id_sort.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_try_id_sort(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static MethodHandle MltEncoderConfig_set_try_id_sort$handle() {
    return MltEncoderConfig_set_try_id_sort.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_try_id_sort(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static MemorySegment MltEncoderConfig_set_try_id_sort$address() {
    return MltEncoderConfig_set_try_id_sort.ADDR;
  }

  /**
   * {@snippet lang=c :
   * void MltEncoderConfig_set_try_id_sort(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static void MltEncoderConfig_set_try_id_sort(MemorySegment self, boolean value) {
    var mh$ = MltEncoderConfig_set_try_id_sort.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("MltEncoderConfig_set_try_id_sort", self, value);
      }
      mh$.invokeExact(self, value);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class MltEncoderConfig_set_allow_fsst {
    public static final FunctionDescriptor DESC =
        FunctionDescriptor.ofVoid(mlt_ffi_h.C_POINTER, mlt_ffi_h.C_BOOL);

    public static final MemorySegment ADDR =
        SYMBOL_LOOKUP.findOrThrow("MltEncoderConfig_set_allow_fsst");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_allow_fsst(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static FunctionDescriptor MltEncoderConfig_set_allow_fsst$descriptor() {
    return MltEncoderConfig_set_allow_fsst.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_allow_fsst(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static MethodHandle MltEncoderConfig_set_allow_fsst$handle() {
    return MltEncoderConfig_set_allow_fsst.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_allow_fsst(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static MemorySegment MltEncoderConfig_set_allow_fsst$address() {
    return MltEncoderConfig_set_allow_fsst.ADDR;
  }

  /**
   * {@snippet lang=c :
   * void MltEncoderConfig_set_allow_fsst(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static void MltEncoderConfig_set_allow_fsst(MemorySegment self, boolean value) {
    var mh$ = MltEncoderConfig_set_allow_fsst.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("MltEncoderConfig_set_allow_fsst", self, value);
      }
      mh$.invokeExact(self, value);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class MltEncoderConfig_set_allow_fast_pfor {
    public static final FunctionDescriptor DESC =
        FunctionDescriptor.ofVoid(mlt_ffi_h.C_POINTER, mlt_ffi_h.C_BOOL);

    public static final MemorySegment ADDR =
        SYMBOL_LOOKUP.findOrThrow("MltEncoderConfig_set_allow_fast_pfor");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_allow_fast_pfor(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static FunctionDescriptor MltEncoderConfig_set_allow_fast_pfor$descriptor() {
    return MltEncoderConfig_set_allow_fast_pfor.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_allow_fast_pfor(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static MethodHandle MltEncoderConfig_set_allow_fast_pfor$handle() {
    return MltEncoderConfig_set_allow_fast_pfor.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_allow_fast_pfor(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static MemorySegment MltEncoderConfig_set_allow_fast_pfor$address() {
    return MltEncoderConfig_set_allow_fast_pfor.ADDR;
  }

  /**
   * {@snippet lang=c :
   * void MltEncoderConfig_set_allow_fast_pfor(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static void MltEncoderConfig_set_allow_fast_pfor(MemorySegment self, boolean value) {
    var mh$ = MltEncoderConfig_set_allow_fast_pfor.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("MltEncoderConfig_set_allow_fast_pfor", self, value);
      }
      mh$.invokeExact(self, value);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class MltEncoderConfig_set_allow_shared_dict {
    public static final FunctionDescriptor DESC =
        FunctionDescriptor.ofVoid(mlt_ffi_h.C_POINTER, mlt_ffi_h.C_BOOL);

    public static final MemorySegment ADDR =
        SYMBOL_LOOKUP.findOrThrow("MltEncoderConfig_set_allow_shared_dict");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_allow_shared_dict(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static FunctionDescriptor MltEncoderConfig_set_allow_shared_dict$descriptor() {
    return MltEncoderConfig_set_allow_shared_dict.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_allow_shared_dict(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static MethodHandle MltEncoderConfig_set_allow_shared_dict$handle() {
    return MltEncoderConfig_set_allow_shared_dict.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * void MltEncoderConfig_set_allow_shared_dict(MltEncoderConfig *self, _Bool value)
   * }
   */
  public static MemorySegment MltEncoderConfig_set_allow_shared_dict$address() {
    return MltEncoderConfig_set_allow_shared_dict.ADDR;
  }
